--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <div class="sidebar">
           <nav>
             <ul>
-              <li><a href="">Home</a></li>
-              <li><a href="">Skills</a></li>
-              <li><a href="">Portfolio</a></li>
-              <li><a href="">Contact</a></li>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Skills</a></li>
+              <li><a href="#">Portfolio</a></li>
+              <li><a href="#">Contact</a></li>
             </ul>
           </nav>
       </div>
